// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HorizontalDefaultCard should render 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    inHorizontalList={true}
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 16,
        "height": 240,
        "margin": 8,
        "marginBottom": 12,
        "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
        "width": 240,
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 16,
          "overflow": "hidden",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "rgb(249, 249, 251)",
            "bottom": 0,
            "flex": 1,
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Image
          blurRadius={80}
          fadeDuration={250}
          onLoad={[Function]}
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "https://picsum.photos/800/1600/?random",
              },
            ]
          }
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          material="regular"
          style={
            Object {
              "backgroundColor": "rgba(242, 242, 247, 0.8)",
              "bottom": 0,
              "flex": 1,
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
      <Image
        fadeDuration={250}
        hasTitleAndSummary={false}
        height={135}
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/800/1600/?random",
            },
          ]
        }
        style={
          Object {
            "aspectRatio": 1.7777777777777777,
            "backgroundColor": "#A5A5A5",
            "width": "100%",
          }
        }
        width={240}
      />
      <View
        style={
          Object {
            "height": 105,
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "paddingHorizontal": 16,
              "paddingVertical": 16,
              "width": "100%",
            }
          }
        />
      </View>
    </View>
  </View>,
]
`;

exports[`HorizontalDefaultCard should render a loading state with isLoading 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    inHorizontalList={true}
    isLoading={true}
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 16,
        "height": 240,
        "margin": 8,
        "marginBottom": 12,
        "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
        "width": 240,
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 16,
          "overflow": "hidden",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "rgb(249, 249, 251)",
            "bottom": 0,
            "flex": 1,
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Image
          blurRadius={80}
          fadeDuration={250}
          onLoad={[Function]}
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "https://picsum.photos/800/1600/?random",
              },
            ]
          }
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          material="regular"
          style={
            Object {
              "backgroundColor": "rgba(242, 242, 247, 0.8)",
              "bottom": 0,
              "flex": 1,
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
      <Image
        fadeDuration={250}
        hasTitleAndSummary={true}
        height={135}
        isLoading={true}
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/800/1600/?random",
            },
          ]
        }
        style={
          Object {
            "aspectRatio": 1.7777777777777777,
            "backgroundColor": "#A5A5A5",
            "width": "100%",
          }
        }
        width={240}
      />
      <View
        style={
          Object {
            "height": 105,
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "paddingHorizontal": 16,
              "paddingVertical": 16,
              "width": "100%",
            }
          }
        >
          <Text
            numberOfLines={2}
            style={
              Object {
                "color": "#27272E",
                "fontFamily": "InterUI-Bold",
                "fontSize": 16,
                "lineHeight": 24,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#27272E",
                }
              }
            >
              Are you telling me that you built a time machine out of a DeLorean?
            </Text>
          </Text>
          <Text
            bold={false}
            italic={false}
            numberOfLines={2}
            style={
              Object {
                "color": "#27272E",
                "fontFamily": "InterUI-Regular",
                "fontSize": 12,
                "lineHeight": 18,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "rgba(39, 39, 46, 0.6)",
                }
              }
            >
              The way I see it, if you’re going to build a time machine into a car, why not do it with some style?
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </View>,
]
`;

exports[`HorizontalDefaultCard should render with a summary 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    inHorizontalList={true}
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 16,
        "height": 240,
        "margin": 8,
        "marginBottom": 12,
        "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
        "width": 240,
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 16,
          "overflow": "hidden",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "rgb(249, 249, 251)",
            "bottom": 0,
            "flex": 1,
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Image
          blurRadius={80}
          fadeDuration={250}
          onLoad={[Function]}
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "https://picsum.photos/800/1600/?random",
              },
            ]
          }
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          material="regular"
          style={
            Object {
              "backgroundColor": "rgba(242, 242, 247, 0.8)",
              "bottom": 0,
              "flex": 1,
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
      <Image
        fadeDuration={250}
        hasTitleAndSummary={true}
        height={135}
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/800/1600/?random",
            },
          ]
        }
        style={
          Object {
            "aspectRatio": 1.7777777777777777,
            "backgroundColor": "#A5A5A5",
            "width": "100%",
          }
        }
        width={240}
      />
      <View
        style={
          Object {
            "height": 105,
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "paddingHorizontal": 16,
              "paddingVertical": 16,
              "width": "100%",
            }
          }
        >
          <Text
            numberOfLines={2}
            style={
              Object {
                "color": "#27272E",
                "fontFamily": "InterUI-Bold",
                "fontSize": 16,
                "lineHeight": 24,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#27272E",
                }
              }
            >
              Are you telling me that you built a time machine out of a DeLorean?
            </Text>
          </Text>
          <Text
            bold={false}
            italic={false}
            numberOfLines={2}
            style={
              Object {
                "color": "#27272E",
                "fontFamily": "InterUI-Regular",
                "fontSize": 12,
                "lineHeight": 18,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "rgba(39, 39, 46, 0.6)",
                }
              }
            >
              The way I see it, if you’re going to build a time machine into a car, why not do it with some style?
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </View>,
]
`;

exports[`HorizontalDefaultCard should render with a title 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    inHorizontalList={true}
    isLoading={true}
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 16,
        "height": 240,
        "margin": 8,
        "marginBottom": 12,
        "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
        "width": 240,
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 16,
          "overflow": "hidden",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "rgb(249, 249, 251)",
            "bottom": 0,
            "flex": 1,
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Image
          blurRadius={80}
          fadeDuration={250}
          onLoad={[Function]}
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "https://picsum.photos/800/1600/?random",
              },
            ]
          }
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          material="regular"
          style={
            Object {
              "backgroundColor": "rgba(242, 242, 247, 0.8)",
              "bottom": 0,
              "flex": 1,
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
      <Image
        fadeDuration={250}
        hasTitleAndSummary={false}
        height={135}
        isLoading={true}
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/800/1600/?random",
            },
          ]
        }
        style={
          Object {
            "aspectRatio": 1.7777777777777777,
            "backgroundColor": "#A5A5A5",
            "width": "100%",
          }
        }
        width={240}
      />
      <View
        style={
          Object {
            "height": 105,
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "paddingHorizontal": 16,
              "paddingVertical": 16,
              "width": "100%",
            }
          }
        >
          <Text
            numberOfLines={2}
            style={
              Object {
                "color": "#27272E",
                "fontFamily": "InterUI-Bold",
                "fontSize": 16,
                "lineHeight": 24,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#27272E",
                }
              }
            >
              Are you telling me that you built a time machine out of a DeLorean?
            </Text>
          </Text>
          <View
            style={
              Object {
                "alignSelf": "stretch",
                "backgroundColor": "#A5A5A5",
                "borderRadius": 16,
                "height": 12,
                "marginVertical": 3,
                "width": "100%",
              }
            }
          />
        </View>
      </View>
    </View>
  </View>,
]
`;

exports[`HorizontalDefaultCard should should render a like icon 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    inHorizontalList={true}
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 16,
        "height": 240,
        "margin": 8,
        "marginBottom": 12,
        "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
        "width": 240,
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 16,
          "overflow": "hidden",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "rgb(249, 249, 251)",
            "bottom": 0,
            "flex": 1,
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Image
          blurRadius={80}
          fadeDuration={250}
          onLoad={[Function]}
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "https://picsum.photos/800/1600/?random",
              },
            ]
          }
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          material="regular"
          style={
            Object {
              "backgroundColor": "rgba(242, 242, 247, 0.8)",
              "bottom": 0,
              "flex": 1,
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
      <Image
        fadeDuration={250}
        hasTitleAndSummary={false}
        height={135}
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/800/1600/?random",
            },
          ]
        }
        style={
          Object {
            "aspectRatio": 1.7777777777777777,
            "backgroundColor": "#A5A5A5",
            "width": "100%",
          }
        }
        width={240}
      />
      <View
        style={
          Object {
            "height": 105,
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "paddingHorizontal": 16,
              "paddingVertical": 16,
              "width": "100%",
            }
          }
        >
          <Text
            numberOfLines={2}
            style={
              Object {
                "color": "#27272E",
                "fontFamily": "InterUI-Bold",
                "fontSize": 16,
                "lineHeight": 24,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#27272E",
                }
              }
            >
              Are you telling me that you built a time machine out of a DeLorean?
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </View>,
]
`;

exports[`HorizontalDefaultCard should should render as isLiked 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    inHorizontalList={true}
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 16,
        "height": 240,
        "margin": 8,
        "marginBottom": 12,
        "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
        "width": 240,
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 16,
          "overflow": "hidden",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "rgb(249, 249, 251)",
            "bottom": 0,
            "flex": 1,
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Image
          blurRadius={80}
          fadeDuration={250}
          onLoad={[Function]}
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "https://picsum.photos/800/1600/?random",
              },
            ]
          }
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          material="regular"
          style={
            Object {
              "backgroundColor": "rgba(242, 242, 247, 0.8)",
              "bottom": 0,
              "flex": 1,
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
      <Image
        fadeDuration={250}
        hasTitleAndSummary={false}
        height={135}
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/800/1600/?random",
            },
          ]
        }
        style={
          Object {
            "aspectRatio": 1.7777777777777777,
            "backgroundColor": "#A5A5A5",
            "width": "100%",
          }
        }
        width={240}
      />
      <View
        style={
          Object {
            "height": 105,
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "paddingHorizontal": 16,
              "paddingVertical": 16,
              "width": "100%",
            }
          }
        >
          <Text
            numberOfLines={2}
            style={
              Object {
                "color": "#27272E",
                "fontFamily": "InterUI-Bold",
                "fontSize": 16,
                "lineHeight": 24,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#27272E",
                }
              }
            >
              Are you telling me that you built a time machine out of a DeLorean?
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </View>,
]
`;
